--- a/CDI WEB Rep/CSS/navbar.css
+++ b/CDI WEB Rep/CSS/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 70px;
-    background-color: rgb(10, 0, 10);
+    background-color: rgb(0, 0, 0);
     justify-content: space-between;
     align-items: center;
     z-index: 0;
@@ -11,7 +11,7 @@
 
 #header a {
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 #header ul {
@@ -20,7 +20,6 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(10, 0, 10);
     gap: 40px;
     margin-right: 50px;
 }
@@ -32,7 +31,7 @@
 
 #header ul li a {
     text-decoration: none;
-    color: white;
+    color: rgb(242, 242, 242);
     transition: all 0.5s ease;
 }
 
@@ -40,7 +39,7 @@
     letter-spacing: 3px;
     margin-left: 30px;
     text-transform: uppercase;
-    color: white;
+    color: rgb(255, 255, 255);
     transition: all 0.3s ease;
 }
 
