--- a/CDI WEB Rep/CSS/Index.css
+++ b/CDI WEB Rep/CSS/Index.css
@@ -1,126 +1,82 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: "IBM Plex Sans", sans-serif; margin: 0px;
 }
 
-#Foto {
-    position: relative;
-    width: 100%;
-    height: 1000px; 
-    display: flex;
-}
+/* Editando el encabezado*/
 
-#Foto img {
-    width: 100%;
-    height: 800px;
-    position: absolute;
-    mask-image: linear-gradient(
-        black 80%,
-        transparent
-    );
-    opacity: 0.2;
-}
-
-#Titulo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    box-sizing: border-box;
-    color: rgb(255, 255, 255);
-    z-index: 9999;
-}
-
-#Titulo h1 {
-    margin: 0;
-    font-weight: 500;
-    font-size: 40px;
-}
-
-body {
-    margin: 0;
-    background-color: rgb(0, 0, 0);
-}
-
-#Curso {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: rgb(10, 36, 0);
-    width: 300px;
-    height: 400px;
-    margin-left: 50px;
-    margin-top: 260px;
-    z-index: 9999;
-    flex-direction: column; 
-    border-radius: 25px;
-    background-image: url(../Fotos/cursoboton.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    color: aliceblue;
-    font-size: 25px;
-    cursor: pointer;
-}
-
-#Curso p {
-    display: none;
-}
-
-#Curso:hover {
-    background-image: none;
-    background-color: rgb(22, 22, 22);
-}
-
-#Curso:hover h1 {
-    display: none;
-}
-
-#Curso:hover p {
-    display: block;
+#encabezado{
+background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/Fotos/fondo.jpg);
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-bottom: 40px;
 
 }
 
-#Jardin {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: rgb(16, 16, 16);
-    width: 300px;
-    height: 400px;
-    margin-left: 50px;
-    margin-top: 260px;
-    z-index: 9999;
-    flex-direction: column; 
-    border-radius: 25px;
-    background-image: url(../Fotos/jardinft.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    color: rgb(0, 0, 0);
-    font-size: 25px;
-    transition: all 0.3s ease;
-    cursor: pointer;
-}
-
-#Jardin p {
-    display: none;
-}
-
-#Jardin:hover {
-    background-image: none;
-    background-color: rgb(22, 22, 22);
-}
-
-#Jardin:hover h1 {
-    display: none;
-}
-
-#Jardin:hover p {
-    display: block;
-    color: white;
+#header{
+margin-bottom: 50px !important;
 
 }
+
+h2{
+justify-self: center;
+}
+
+body{
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: 350px 1fr 8fr;
+column-gap: 1px;
+background-color: rgb(244, 239, 239);
+}
+
+#encabezado,h2{
+grid-column: 1/-1;
+}
+
+#Titulo{
+font-size: 90px;
+}
+
+h4{
+font-size: 25px;
+}
+
+.divcursos{
+display: flex;
+flex-direction: column;
+margin-top: 30px;
+justify-self: center;
+width: 60%;
+height: 110%;
+text-align: center;
+box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+background-color: white;
+}
+
+.imgapartado{
+
+height: 50%;
+margin-bottom: 30px;
+
+}
+
+#imgprogramacion{
+background-image: url(/Fotos/cursoboton.jpg);
+}
+
+#imgjardin{
+background-image: url(/Fotos/jardinft.jpg);
+}
+
+#imgpro1{
+background-image: url(/Fotos/apartadoproximo1.jpg);
+}
+
+#imgpro2{
+background-image: url(/Fotos/apartadoproximo2.jpg);
+}
+
+
