--- a/CDI WEB Rep/CSS/navbar.css
+++ b/CDI WEB Rep/CSS/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 70px;
-    background-color: rgb(0, 0, 0);
+    background-color: transparent;
     justify-content: space-between;
     align-items: center;
     z-index: 0;
@@ -11,7 +11,7 @@
 
 #header a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(56, 55, 55);
 }
 
 #header ul {
@@ -31,7 +31,7 @@
 
 #header ul li a {
     text-decoration: none;
-    color: rgb(242, 242, 242);
+    color: rgb(43, 42, 42);
     transition: all 0.5s ease;
 }
 
@@ -39,7 +39,7 @@
     letter-spacing: 3px;
     margin-left: 30px;
     text-transform: uppercase;
-    color: rgb(255, 255, 255);
+    color: rgb(56, 55, 55);
     transition: all 0.3s ease;
 }
 
