--- a/CDI WEB Rep/CSS/Index.css
+++ b/CDI WEB Rep/CSS/Index.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-* {
-    font-family: "IBM Plex Sans", sans-serif; margin: 0px;
-}
-
+*{
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    margin: 0px;
+    font-weight: bold;
+  }
+  
 /* Editando el encabezado*/
 
 #encabezado{
@@ -28,7 +32,6 @@ body{
 display: grid;
 grid-template-columns: repeat(4, 1fr);
 grid-template-rows: 350px 1fr 8fr;
-column-gap: 1px;
 background-color: rgb(244, 239, 239);
 }
 
@@ -45,9 +48,10 @@ font-size: 25px;
 }
 
 .divcursos{
+transition: 0.8s;
 display: flex;
 flex-direction: column;
-margin-top: 30px;
+margin-top: 60px;
 justify-self: center;
 width: 60%;
 height: 110%;
@@ -56,10 +60,17 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 background-color: white;
 }
 
+.divcursos:hover{
+width: 65%;
+height: 120%;
+background-color: rgb(152, 141, 141);
+color: white;
+}
+
 .imgapartado{
 
 height: 50%;
-margin-bottom: 30px;
+margin-bottom: 45px;
 
 }
 
@@ -79,4 +90,16 @@ background-image: url(/Fotos/apartadoproximo1.jpg);
 background-image: url(/Fotos/apartadoproximo2.jpg);
 }
 
+p{
+text-align: center;
+font-size: 12px;
+margin-left: 10px;
+margin-right: 10px;
+}
 
+.apartados{
+display: flex;
+justify-content: center;
+text-decoration: none;
+color: black;
+}
